[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"                                   # error handling
bytes = "1.11.0"                                     # helps manage buffers
dashmap = "6.1.0"
futures = "0.3.31"
memchr = "2.7.6"
nom = "8.0.0"
thiserror = "2.0.17"                                # error handling
tokio = { version = "1.47.2", features = ["full"] } # async networking
tokio-util = { version = "0.7.17", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
